# fastapi_salary

./: .gitignore  README.md  db.py  main.py  openapi.json  openapi.yaml  pyproject.toml  test_main.py  users.db
