[tool.poetry]
name = "get-salary"
version = "0.1.0"
description = ""
authors = ["Vlada <108741329+vlada-97@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.96.0"
jwt = "^1.3.1"
uvicorn = "^0.22.0"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
python-jwt = "^4.0.0"
pyjwt = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
